--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,6 @@
   font-family: sans-serif;
   list-style: none;
   text-decoration: none;
-  color: white;
 }
 
 body{
@@ -65,40 +64,43 @@ a.active:hover{
   background-image: linear-gradient(0deg, #2AF598 0%, #08AEEA 100%);
   padding: 20px 10%;
   width: 100%;
+  color: white;
 }
-.tutoriala, .tutorialb, .tutorialc{
-  background-color: grey;
+.sub-titulos{
+  margin: 20px;
+  text-align: center;
+}
+/*--------------inicio estilos tutorial--------------------------------*/
+
+.titulo{
   padding: 20px;
-  display: flex; 
-  justify-content: space-around;
+  text-align: center;
+}
+.video{
+  display: block;
+  width: 70vw;
+  height: 39.375vw;
+  box-sizing: content-box;
+  margin: 5px auto;
+}
+iframe{
   width: 100%;
-  height: auto;
-  margin: 20px auto;
+  height: 100%;
 }
-.box{
-  padding: 20px;
-  width: auto;
-  height: auto;
-  border-radius: 20px;
-  margin: 5px;
+.contenido{
+  display: block;
+  width: 80%;
+  box-sizing: content-box;
+  margin: 5px auto;
+}
+.uno{
+  background-color: burlywood;
+}
+.dos{
+  background-color: grey;
 }
 
-.bb{
-  background-color: burlywood;
-}
-
-.bc{
-  background-color: burlywood;
-}
-.bd{
-  background-color: burlywood;
-}
-.be{
-  background-color: burlywood;
-}
-.bf{
-  background-color: burlywood;
-}
+/*--------------------fin estilos tutorial-------------------------------*/
 
 .redes{
   background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(37,145,251,0.98) 0.1%, rgba(0,7,128,1) 99.8% );
@@ -108,6 +110,7 @@ a.active:hover{
   height: auto;
   margin: 0px 0px;
   text-align: center;
+  color: white;
 }
 .contacto{
   display: inline-block;
@@ -125,6 +128,18 @@ a.active:hover{
   text-align: center;
   padding: 5px;
 }
+@media screen and (max-width: 850px){
+  /*estilos*/
+  .video{
+    display: block;
+    width: 80vw;
+    height: 45vw;
+    box-sizing: content-box;
+    margin: 5px auto;
+  }
+
+/*estilos*/
+}
 
 @media screen and (max-width: 600px) {
   .checkbtn{
@@ -136,7 +151,7 @@ a.active:hover{
       position: fixed;
       width: 100%;
       height: 100vh;
-      background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(37,145,251,0.98) 0.1%, rgba(0,7,128,1) 99.8% );
+      background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(37,145,251,0.94) 0.1%, rgba(0,7,128,0.94) 99.8% );
       top: 60px;
       text-align: center;
       left: -100%;
@@ -175,34 +190,19 @@ a.active:hover{
   .barner{
     margin: 0px;
   }
-  .tutoriala, .tutorialb, .tutorialc{
-    flex-direction: column;
-    justify-content: space-around;    
-  } 
-  .box{
-    margin: 10px auto;
+  /*estilos*/
+
+  .video{
+    display: block;
+    width: 100vw;
+    height: 56.25vw;
+    box-sizing: content-box;
+    margin: 5px auto;
   }
+
+  /*estilos*/
   .contacto{
     display: block;
     margin-top: 20px;
   }
 }
-
-/*
-background-color: #4158D0;
-background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-background-color: #21D4FD;
-background-image: linear-gradient(90deg, #21D4FD 0%, #B721FF 100%);
-background-image: url('../images/hexagons.svg');
-background-color: rgb(224, 242, 241);
-background-image: linear-gradient(90deg, #B721FF 0%, #21D4FD 100%);
-850px
-background-color: rgb(228, 217, 217);
-background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
-background-color: #F4D03F;
-background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
-
-
-*/
