--- a/styles/style.css
+++ b/styles/style.css
@@ -1,208 +1,171 @@
 *{
   margin: 0%;
   padding: 0%;
-  box-sizing: border-box;
   font-family: sans-serif;
   list-style: none;
   text-decoration: none;
+  box-sizing: border-box;
 }
-
 body{
-  background-color: rgb(228, 217, 217);
+  background-color: beige;
+  background-image: url('../images/background.svg');
+}
+.wrapper{
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.mainmenu{
+/*                         Section banner                    */
+.containerBanner{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: right;
+  width: 100%;
+  height: 28px;
+  line-height: 28px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+.boxBanner{
+  height: 28px;
+  line-height: 28px;
+  margin-right: 40px;
+}
+
+/*                     menu nav                    */
+nav{
+  background-color: #68e1fd;
   width: 100%;
   height: 60px;
-  background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(0,7,128,1) 0.1%, rgba(37,145,251,0.98) 99.8% );
 }
-
-.enlace, ul, li{
-  display: inline;
-  line-height: 60px;
-}
-
-.checkbtn, ul{
+nav ul{
   float: right;
+  margin-right: 20px;
 }
-
-li{
-  margin-right: 30px;
+nav ul li{
+  display: inline-block;
+  line-height: 60px;
+  margin: 0 5px;
 }
-a.link{
-  color: white;
+nav ul li a{
+  color: #2e98fa;
+  padding: 5px 10px;
   border-radius: 5px;
-  padding: 4px 10px;
+  font-size: large;
+  font-weight: 500;
 }
-a.link:hover{
-  background-color: blue;
-  color: white;
-  border-radius: 5px;
-  padding: 4px 10px;
-}
-a.active{
+.linkmenu:hover, .active{
   background-color: white;
-  border-radius: 5px;
-  padding: 4px 10px;
-  color: black;
-}
-a.active:hover{
-  background-color: blue;
-  color: white;
-  border-radius: 5px;
-  padding: 4px 10px;
 }
 .checkbtn{
   float: right;
+  line-height: 60px;
+  cursor: pointer;
+  margin-right: 20px;
   display: none;
 }
 #check{
   display: none;
 }
 
-.barner{
-  background-image: linear-gradient(0deg, #2AF598 0%, #08AEEA 100%);
-  padding: 20px 10%;
+/*                         section 1                           */
+.intro{
+  margin-left: 2em;
+  margin-right: 2em;
+  margin-top: 1em;
+}
+
+/*                         Section 2                           */
+
+
+/*                           footer                             */
+footer{  
+  background-color: #2e98fa;
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+.containerFooter{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   width: 100%;
+  height: 36px;
+  line-height: 36px;
+  margin-top: 10px;
+}
+.infoBox{
+  display: flex;
+  flex-wrap: wrap;
+  height: 36px;
+  line-height: 36px;
+  margin-right: 20px;
+}
+.callBox{
+  height: 36px;
+  line-height: 36px;
+  margin-right: 5px;
+}
+.infoBox .callBox a:visited{
   color: white;
 }
-.sub-titulos{
-  margin: 20px;
-  text-align: center;
-}
-/*--------------inicio estilos tutorial--------------------------------*/
-
-.titulo{
-  padding: 20px;
-  text-align: center;
-}
-.video{
-  display: block;
-  width: 70vw;
-  height: 39.375vw;
-  box-sizing: content-box;
-  margin: 5px auto;
-}
-iframe{
-  width: 100%;
-  height: 100%;
-}
-.contenido{
-  display: block;
-  width: 80%;
-  box-sizing: content-box;
-  margin: 5px auto;
-}
-.uno{
-  background-color: burlywood;
-}
-.dos{
-  background-color: grey;
-}
-
-/*--------------------fin estilos tutorial-------------------------------*/
-
-.redes{
-  background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(37,145,251,0.98) 0.1%, rgba(0,7,128,1) 99.8% );
-  padding: 20px;
-  display: block;  
-  width: 100%;
-  height: auto;
-  margin: 0px 0px;
-  text-align: center;
+.infoBox .callBox a:link{
   color: white;
 }
-.contacto{
-  display: inline-block;
-  margin-right: 50px;
-  margin-left: 5px;
-}
-.red{
-  display: inline-block;
+.downFooter{
+  text-align: center;
+  margin-bottom: 10px;
 }
 
-.date{
-  background-color: black;
-  color: white;
-  font-size: small;
-  text-align: center;
-  padding: 5px;
-}
-@media screen and (max-width: 850px){
-  /*estilos*/
-  .video{
-    display: block;
-    width: 80vw;
-    height: 45vw;
-    box-sizing: content-box;
-    margin: 5px auto;
+/*                                         media  800px                           */
+@media screen and (max-width: 800px)
+{
+  .containerFooter{
+    height: auto;
+    flex-direction: column-reverse;
   }
-
-/*estilos*/
+  .infoBox{
+    justify-content: center;
+    margin-bottom: 10px;
+  }
 }
 
+/*                                          media  600px               */
 @media screen and (max-width: 600px) {
+
   .checkbtn{
-      display: block;
-      margin-right: 30px;
-      line-height: 60px;
+    display: block;
   }
   ul{
-      position: fixed;
-      width: 100%;
-      height: 100vh;
-      background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(37,145,251,0.94) 0.1%, rgba(0,7,128,0.94) 99.8% );
-      top: 60px;
-      text-align: center;
-      left: -100%;
-      margin: 0px 0px;
-      line-height: 30px;
-      transition: all 0.3s;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(104, 225, 253, 1);
+    background-image: url('../images/backgroundmedia.svg');
+    top: 104px;
+    left: -100%;
+    text-align: center;
+    transition: 0.4s;
+    padding-top: 20px;
   }
-  li{
-      display: block;
-      margin: 30px 0px;
+  nav ul li{
+    display: block;
   }
   #check:checked ~ ul{
-      left: 0;
-  }
-  a.link{
-      color: white;
-      background-color: transparent;
-      border-radius: 5px;
-      font-size: large;
-      padding: 4px 10px;
-  }
-  a.link:hover{
-      background-color: blue;
-      color: white;
-      border-radius: 5px;
-      padding: 4px 10px;
-  }
-  a.active{
+    left: 0;
+  }  
+  nav ul li a{
+    padding: 5px 10px;
+    border-radius: 5px;
     font-size: large;
+    font-weight: 500;
   }
-  a.active:hover{
-      background-color: blue;
-      color: white;
+  .containerFooter{
+    height: auto;
+    flex-direction: column-reverse;
   }
-
-  .barner{
-    margin: 0px;
-  }
-  /*estilos*/
-
-  .video{
-    display: block;
-    width: 100vw;
-    height: 56.25vw;
-    box-sizing: content-box;
-    margin: 5px auto;
-  }
-
-  /*estilos*/
-  .contacto{
-    display: block;
-    margin-top: 20px;
-  }
+  .infoBox{
+    justify-content: center;
+  }  
 }
