--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,31 @@ nav ul li a{
 }
 
 /*                         Section 2                           */
+/*--------------inicio estilos tutorial--------------------------------*/
 
+.titulo{
+  padding: 20px;
+  text-align: center;
+}
+.video{
+  display: block;
+  width: 70vw;
+  height: 39.375vw;
+  box-sizing: content-box;
+  margin: 5px auto;
+}
+iframe{
+  width: 100%;
+  height: 100%;
+}
+.contenido{
+  display: block;
+  width: 80%;
+  box-sizing: content-box;
+  margin: 5px auto;
+}
+
+/*--------------------fin estilos tutorial-------------------------------*/
 
 /*                           footer                             */
 footer{  
@@ -129,6 +153,13 @@ footer{
     justify-content: center;
     margin-bottom: 10px;
   }
+  .video{
+    display: block;
+    width: 80vw;
+    height: 45vw;
+    box-sizing: content-box;
+    margin: 5px auto;
+  }
 }
 
 /*                                          media  600px               */
@@ -167,5 +198,12 @@ footer{
   }
   .infoBox{
     justify-content: center;
+  }
+  .video{
+    display: block;
+    width: 100vw;
+    height: 56.25vw;
+    box-sizing: content-box;
+    margin: 5px auto;
   }  
 }
